<resources>
    <string name="app_name">IUT-TP2</string>
    <string name="action_settings">Settings</string>
    <string name="label_avatar">Avatar:</string>
    <string name="label_firstname">Firstname:</string>
    <string name="label_lastname">Lastname:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_email">E-mail:</string>
    <string name="input_gender_f">Female</string>
    <string name="input_gender_m">Male</string>
    <string name="label_zipcode">ZIP Code:</string>
    <string name="label_address">Address:</string>
    <string name="button_pick_a_date">Choose a date</string>
    <string name="hint_firstname">John</string>
    <string name="hint_lastname">Smith</string>
    <string name="hint_birthday">Format: yyyy/mm/dd</string>
    <string name="hint_email">Format: address@domain.com</string>
    <string name="hint_zipcode">Format: XXXXX</string>
    <string name="hint_address">Format: XXX Name Type\nCity</string>
</resources>
